# my-clang-tools

./: CMakeLists.txt  test-clang.cpp
cmake/: FindClang.cmake
